[package]
name = "guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
sqlx = "0.8.5"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "*"
regex = "1.11.1"
